<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detail_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/image_content_description"
                tools:src="@mipmap/ic_launcher_round"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/play_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:onClick="playTrailer"
                    android:text="@string/play_trailer"
                    android:visibility="visible"/>

                <Button
                    android:id="@+id/mark_as_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onButtonClick"
                    android:text="Favorite"
                    android:visibility="visible"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/movie_attribute_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:textSize="14sp"/>

        <TextView
            style="@style/movie_attribute_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"/>

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:textSize="14sp"/>

        <TextView
            style="@style/movie_attribute_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_average" />

        <TextView
            android:id="@+id/vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:textSize="14sp"/>

        <TextView
            style="@style/movie_attribute_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="14sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movieReviewRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</ScrollView>